Added Cryptography app

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -121,12 +121,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5040\n"
+     ]
+    }
+   ],
+   "source": [
+    "factorial(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fac"
-   ]
+   "source": []
   }
  ],
  "metadata": {
