Added Email Sender app Completed Cryptography app

--- a/Cryptography App .ipynb
+++ b/Cryptography App .ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A Simple Cryptography App in Python "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -10,15 +17,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate a key \n",
+    "Generate a key to encrypt and decrypt the data. The key may be generated only once, unless you want to change the key. This key needs to be kept safe. If you lose it you wpn't be able to encrypt or decrypt messages. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def symmetric_key():\n",
+    "    \"\"\"\n",
+    "    Generates a key for \n",
+    "    Encryption and Decryption\n",
+    "    \"\"\"\n",
     "    key = Fernet.generate_key()\n",
     "    with open('secret.key','wb') as f:\n",
     "        f.write(key)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the key"
    ]
   },
   {
@@ -28,9 +54,20 @@
    "outputs": [],
    "source": [
     "def get_key():\n",
+    "    \"\"\"\n",
+    "    Loads previoulsy \n",
+    "    generated key\n",
+    "    \"\"\"\n",
     "    with open('secret.key','rb') as f:\n",
     "        key = f.read()\n",
     "    return key"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get message from the user  "
    ]
   },
   {
@@ -40,16 +77,34 @@
    "outputs": [],
    "source": [
     "def user_input():\n",
+    "    \"\"\"\n",
+    "    Gets message to be encrypted \n",
+    "    from the user\n",
+    "    \"\"\"\n",
     "    return input('Enter the text(message) you want to encrypt: ')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encrypt the message \n",
+    "Steps to Encrypt the message:\n",
+    "1. Get message from the user\n",
+    "2. Initialise the [Fernet](https://cryptography.io/en/latest/fernet.html) class with the key as a parameter\n",
+    "3. Encrypt the message "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encrypt_message():\n",
+    "    \"\"\"\n",
+    "    Encrypts the users message\n",
+    "    \"\"\"\n",
     "    message = bytes(user_input(), encoding='utf-8')\n",
     "    f = Fernet(get_key())\n",
     "    encrypted_message = f.encrypt(message)\n",
@@ -58,71 +113,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the text(message) you want to encrypt: hi\n"
+      "Enter the text(message) you want to encrypt: x marks the spot\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "b'gAAAAABf2fBB9bFEeSuOXmRUenHV83Z7SbOLQOaupq7Tt50WQQvjskcLF5d2VWSHVOjBefTD-TfFkXItJzD4h2UpbajZIYX1oQ=='"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "encrypt_message()"
+    "secret_message = encrypt_message()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decrypt the message\n",
+    "Steps to Decrypt the message:\n",
+    "\n",
+    "1. Get message from the user\n",
+    "2. Initialise the Fernet class with the key as a parameter\n",
+    "3. Encrypt the message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decrypt_message():\n",
-    "    encrypted_message = encrypt_message()\n",
+    "def decrypt_message(secret_message):\n",
+    "    \"\"\"\n",
+    "    Decrypts the users the encrypted \n",
+    "    message and returns the original\n",
+    "    message\n",
+    "    \"\"\"\n",
     "    f = Fernet(get_key())\n",
-    "    original_message = f.decrypt(encrypted_message)\n",
+    "    original_message = f.decrypt(secret_message)\n",
     "    return original_message.decode(\"utf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the text(message) you want to encrypt: hi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "original  = decrypt_message()"
+    "original  = decrypt_message(secret_message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hi\n"
+      "x marks the spot\n"
      ]
     }
    ],
