Completed email sender

--- a/Cryptography App .ipynb
+++ b/Cryptography App .ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,19 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the text(message) you want to encrypt: x marks the spot\n"
+      "Enter the text(message) you want to encrypt: X does not mark the spot Y does\n"
      ]
     }
    ],
    "source": [
     "secret_message = encrypt_message()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'gAAAAABf3jeJLWSLYqSpF24dbFvMBDesPDvA3C2EBblkJ_GLeX2yw4G-Qd5B9OaOwaSTyOfVspb-J8Tupg-ykKlK0IAHsU92XKrHA10OPjKpUpJASE6aUFE='\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(secret_message)"
    ]
   },
   {
@@ -142,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x marks the spot\n"
+      "X does not mark the spot Y does\n"
      ]
     }
    ],
