--- a/Email Sender.ipynb
+++ b/Email Sender.ipynb
@@ -47,54 +47,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<emails.backend.SMTPResponse status_code=250 status_text=b'2.0.0 OK  1608361696 b13sm11020353pgr.59 - gsmtp'>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "html_text = \"hi\"\n",
-    "\n",
-    "message = emails.html(html=html_text, subject=\"test\", mail_from=(\"You\",\"someone@xyz.com\") )\n",
-    "\n",
-    "message.send(to=\"vaylon.fernandes23@gmail.com\", \n",
-    "             smtp={\"host\":\"smtp.gmail.com\", \n",
-    "                  \"timeout\":5, \n",
-    "                  \"port\":587,\n",
-    "                  \"user\":\"vaylonf@gmail.com\",\n",
-    "                  \"password\":\"ows@#4698\",\n",
-    "                  \"tls\":True})"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-af2c1f303b98>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-af2c1f303b98>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    html_text =\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def send_mail():\n",
     "    sender_mail = input(\"Enter your email-id: \")\n",
-    "    password = input(\"Enter your password: \")\n",
+    "    receiver_name = input(\"Enter receivers name: \")\n",
     "    receiver_mail = input(\"Enter the receivers email-id: \")\n",
-    "    html_text = "
+    "    html_text = f'''<p>Hey &nbsp;{receiver_name},&nbsp;</p>\n",
+    "                    <p>Hope you are doing fine. I will visit you during the holidays. I will let you know about the exact date soon.&nbsp;</p>\n",
+    "                    <p>Regards,&nbsp;</p>\n",
+    "                    <p>Vaylon</p>\n",
+    "               '''\n",
+    "    mail_subject = input(\"Enter a subject: \")\n",
+    "    message = emails.html(html=html_text, subject=mail_subject, mail_from=(\"Vaylon\", sender_mail))\n",
+    "    send_message = message.send(to=receiver_mail, \n",
+    "             smtp={\"host\":\"smtp.gmail.com\", \n",
+    "                  \"timeout\":5, \n",
+    "                  \"port\":587,\n",
+    "                  \"user\":sender_mail,\n",
+    "                  \"password\":input(\"Enter your password: \"),\n",
+    "                  \"tls\":True})\n",
+    "    return send_message.status_code"
    ]
   },
   {
